--- a/portfolio.html
+++ b/portfolio.html
@@ -13,51 +13,56 @@
 font-family: 'Roboto', sans-serif;-->
 </head>
 <body >
-    <header>
-        <nav>
-            <a class="logo" href=""><span class="web">Web</span>Studio</a>
-            <ul>
-                <li><a class="link-header" href="index.html">Студия</a></li>
-                <li><a class="link-header current" href="portfolio.html">Портфолио</a></li>
-                <li><a class="link-header" href="">Контакты</a></li>
-            </ul>
-        </nav>
-        <p><a class="link-hd-adr" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-        <p><a class="link-hd-adr" href="tel:+380961111111">+38 096 111 11 11</a></p>
+    
+    <header class="portfolio-header">
+        <div class="container">
+            <nav>
+                <a class="logo" href=""><span class="web">Web</span>Studio</a>
+                <ul>
+                    <li><a class="link-header" href="index.html">Студия</a></li>
+                    <li><a class="link-header current" href="portfolio.html">Портфолио</a></li>
+                    <li><a class="link-header" href="">Контакты</a></li>
+                </ul>
+            </nav>
+            <p><a class="link-hd-adr" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+            <p><a class="link-hd-adr" href="tel:+380961111111">+38 096 111 11 11</a></p>
+        </div>    
     </header>
     <main>
-       
-        <div></div>
-        <section>
-            <!--Скрыть заголовок-->
-            <h1>Портфолио</h1>
-            <a class="portfolio-btn" href="" >Все</a>
-            <a class="portfolio-btn" href="" >Веб-сайты</a>
-            <a class="portfolio-btn" href="" >Приложения</a>
-            <a class="portfolio-btn" href="" >Дизайн</a>
-            <a class="portfolio-btn" href="" >Маркетинг</a>
+        <section class="portfolio-main">
+            <div class="container">
+                <!--Скрыть заголовок-->
+                <h1>Портфолио</h1>
+                <a class="portfolio-btn" href="" >Все</a>
+                <a class="portfolio-btn" href="" >Веб-сайты</a>
+                <a class="portfolio-btn" href="" >Приложения</a>
+                <a class="portfolio-btn" href="" >Дизайн</a>
+                <a class="portfolio-btn" href="" >Маркетинг</a>
 
-            <ul>
-                <li><img src="./images/img.jpg" alt="Photo" width="370"><h3>Технокряк</h3><p class="portfolio-names">Веб-сайт</p></li>
-                <li><img src="./images/img1.jpg" alt="Photo" width="370"><h3>Постер New Orlean vs Golden Star</h3><p class="portfolio-names">Дизайн</p></li>
-                <li><img src="./images/img2.jpg" alt="Photo" width="370"><h3>Ресторан Seafood</h3><p class="portfolio-names">Приложение</p></li>
-                <li><img src="./images/img3.jpg" alt="Photo" width="370"><h3>Проект Prime</h3><p class="portfolio-names">Маркетинг</p></li>
-                <li><img src="./images/img4.jpg" alt="Photo" width="370"><h3>Проект Boxes</h3><p class="portfolio-names">Приложение</p></li>
-                <li><img src="./images/img5.jpg" alt="Photo" width="370"><h3>Inspiration has no Borders</h3><p class="portfolio-names">Веб-сайт</p></li>
-                <li><img src="./images/img6.jpg" alt="Photo" width="370"><h3>Издание Limited Edition</h3><p class="portfolio-names">Дизайн</p></li>
-                <li><img src="./images/img7.jpg" alt="Photo" width="370"><h3>Проект LAB</h3><p class="portfolio-names">Маркетинг</p></li>
-                <li><img src="./images/img8.jpg" alt="Photo" width="370"><h3>Growing Business</h3><p class="portfolio-names">Приложение</p></li>
-            </ul>
+                <ul>
+                    <li><img src="./images/img.jpg" alt="Photo" width="370"><h3>Технокряк</h3><p class="portfolio-names">Веб-сайт</p></li>
+                    <li><img src="./images/img1.jpg" alt="Photo" width="370"><h3>Постер New Orlean vs Golden Star</h3><p class="portfolio-names">Дизайн</p></li>
+                    <li><img src="./images/img2.jpg" alt="Photo" width="370"><h3>Ресторан Seafood</h3><p class="portfolio-names">Приложение</p></li>
+                    <li><img src="./images/img3.jpg" alt="Photo" width="370"><h3>Проект Prime</h3><p class="portfolio-names">Маркетинг</p></li>
+                    <li><img src="./images/img4.jpg" alt="Photo" width="370"><h3>Проект Boxes</h3><p class="portfolio-names">Приложение</p></li>
+                    <li><img src="./images/img5.jpg" alt="Photo" width="370"><h3>Inspiration has no Borders</h3><p class="portfolio-names">Веб-сайт</p></li>
+                    <li><img src="./images/img6.jpg" alt="Photo" width="370"><h3>Издание Limited Edition</h3><p class="portfolio-names">Дизайн</p></li>
+                    <li><img src="./images/img7.jpg" alt="Photo" width="370"><h3>Проект LAB</h3><p class="portfolio-names">Маркетинг</p></li>
+                    <li><img src="./images/img8.jpg" alt="Photo" width="370"><h3>Growing Business</h3><p class="portfolio-names">Приложение</p></li>
+                </ul>
+            </div>
         </section>
-        <footer> 
-            <a class="logo-foot" href=""><span class="web">Web</span>Studio</a>
-            <address>
-              <ul> 
-                    <li> <a class="link-foot-adr" href="https://goo.gl/maps/Ae1zcUtkZR1KB5ff6">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li> <a class="link-foot" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li> <a class="link-foot" href="tel:+380961111111">+38 096 111 11 11</a></li>
-              </ul>
-            </address>
+        <footer class="portfolio-footer"> 
+            <div class="container">
+                <a class="logo-foot" href=""><span class="web">Web</span>Studio</a>
+                <address>
+                <ul> 
+                        <li> <a class="link-foot-adr" href="https://goo.gl/maps/Ae1zcUtkZR1KB5ff6">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li> <a class="link-foot" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li> <a class="link-foot" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+                </address>
+            </div>    
       </footer>
     </main>
 </body>
