--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@ font-family: 'Roboto', sans-serif; -->
 <body >
     <header class="header">
         <div class="container">
-            <nav>
+            <nav class="header-nav">
                 <a class="logo" href=""><span class="web">Web</span>Studio</a>
-                <ul>
+                <ul class="header-nav-links">
                     <li><a class="link-header current" href="index.html">Студия</a></li>
                     <li><a class="link-header" href="portfolio.html">Портфолио</a></li>
                     <li><a class="link-header" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <p><a class="link-hd-adr" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-            <p><a class="link-hd-adr" href="tel:+380961111111">+38 096 111 11 11</a></p>
+           <div class="header-address">
+                <p><a class="link-hd-adr" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+                <p><a class="link-hd-adr" href="tel:+380961111111">+38 096 111 11 11</a></p>
+            </div>
         </div>
     </header>
     <main>
