--- a/portfolio.html
+++ b/portfolio.html
@@ -16,16 +16,18 @@ font-family: 'Roboto', sans-serif;-->
     
     <header class="portfolio-header">
         <div class="container">
-            <nav>
+            <nav class="portfolio-header-nav">
                 <a class="logo" href=""><span class="web">Web</span>Studio</a>
-                <ul>
+                <ul class="portfolio-header-links">
                     <li><a class="link-header" href="index.html">Студия</a></li>
                     <li><a class="link-header current" href="portfolio.html">Портфолио</a></li>
                     <li><a class="link-header" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <p><a class="link-hd-adr" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-            <p><a class="link-hd-adr" href="tel:+380961111111">+38 096 111 11 11</a></p>
+            <div class="portfolio-header-address">
+                <p><a class="link-hd-adr" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+                <p><a class="link-hd-adr" href="tel:+380961111111">+38 096 111 11 11</a></p>
+            </div>
         </div>    
     </header>
     <main>
