--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ font-family: 'Roboto', sans-serif; -->
                 <a class="hero-btn" href="#">Заказать услугу</a>
             </div>
         </section>
-        <section class="features">
+        <section class="about">
             <div class="container">
-                <ul>
+                <ul class="features">
                     <li><h3 class="title-features">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                    <p class="features-p"> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="features-p"> Идейные соображения, а также <br> начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li><h3 class="title-features">ПУНКТУАЛЬНОСТЬ</h3>
-                    <p class="features-p"> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <p class="features-p"> Задача организации, в особенности <br> же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li><h3 class="title-features">ПЛАНИРОВАНИЕ</h3>
                     <p class="features-p"> Равным образом консультация с широким активом в значительной степени обуславливает.</p>
@@ -56,7 +56,7 @@ font-family: 'Roboto', sans-serif; -->
                     </li>
                 </ul>
                 <h2 class="title">Чем мы занимаемся</h2>
-                <div>   
+                <div class="about-images">   
                     <img class="images" src="./images/img.svg" alt="Photo 1" width="370">
                     <img class="images" src="./images/img-3.svg" alt="Photo 2" width="370">
                     <img class="images" src="./images/img-1.svg" alt="Photo 3" width="370">
