--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@ font-family: 'Roboto', sans-serif; -->
         <section class="team">
             <div class="container">
                 <h2 class="title">Наша команда</h2>
-                <ul>
-                    <li><img src="./images/img-4.svg" alt="Photo" width="270"><h3 class="name">Игорь Демьяненко</h3><p class="work-position">Product Designer</p> </li>
-                    <li><img src="./images/img-5.svg" alt="Photo" width="270"><h3 class="name">Ольга Репина</h3><p class="work-position">Frontend Developer</p></li>
-                    <li><img src="./images/img-6.svg" alt="Photo" width="270"><h3 class="name">Николай Тарасов</h3><p class="work-position">Marketing</p></li>
-                    <li><img src="./images/img-7.svg" alt="Photo" width="270"><h3 class="name">Михаил Ермаков</h3><p class="work-position">UI Designer</p></li>
+                <ul class="workers">
+                    <li><img src="./images/img-4.svg" alt="Photo" width="270"><div class="worker-names"><h3 class="name">Игорь Демьяненко</h3><p class="work-position">Product Designer</p></div> </li>
+                    <li><img src="./images/img-5.svg" alt="Photo" width="270"><div class="worker-names"><h3 class="name">Ольга Репина</h3><p class="work-position">Frontend Developer</p></div></li>
+                    <li><img src="./images/img-6.svg" alt="Photo" width="270"><div class="worker-names"><h3 class="name">Николай Тарасов</h3><p class="work-position">Marketing</p></div></li>
+                    <li><img src="./images/img-7.svg" alt="Photo" width="270"><div class="worker-names"><h3 class="name">Михаил Ермаков</h3><p class="work-position">UI Designer</p></div></li>
                 </ul>
             </div>
         </section>
@@ -78,7 +78,7 @@ font-family: 'Roboto', sans-serif; -->
             <div class="container">
                 <a class="logo-foot" href=""><span class="web">Web</span>Studio</a>
                 <address>
-                <ul> 
+                <ul class="footer-address"> 
                         <li> <a class="link-foot-adr" href="https://goo.gl/maps/Ae1zcUtkZR1KB5ff6">г. Киев, пр-т Леси Украинки, 26</a></li>
                         <li> <a class="link-foot" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                         <li> <a class="link-foot" href="tel:+380961111111">+38 096 111 11 11</a></li>
