--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@ font-family: 'Roboto', sans-serif;-->
                 </ul>
             </div>
         </section>
-        <footer class="portfolio-footer"> 
+        <footer class="footer"> 
             <div class="container">
                 <a class="logo-foot" href=""><span class="web">Web</span>Studio</a>
                 <address>
