--- a/portfolio.html
+++ b/portfolio.html
@@ -35,22 +35,23 @@ font-family: 'Roboto', sans-serif;-->
             <div class="container">
                 <!--Скрыть заголовок-->
                 <h1>Портфолио</h1>
-                <a class="portfolio-btn" href="" >Все</a>
-                <a class="portfolio-btn" href="" >Веб-сайты</a>
-                <a class="portfolio-btn" href="" >Приложения</a>
-                <a class="portfolio-btn" href="" >Дизайн</a>
-                <a class="portfolio-btn" href="" >Маркетинг</a>
-
-                <ul>
-                    <li><img src="./images/img.jpg" alt="Photo" width="370"><h3>Технокряк</h3><p class="portfolio-names">Веб-сайт</p></li>
-                    <li><img src="./images/img1.jpg" alt="Photo" width="370"><h3>Постер New Orlean vs Golden Star</h3><p class="portfolio-names">Дизайн</p></li>
-                    <li><img src="./images/img2.jpg" alt="Photo" width="370"><h3>Ресторан Seafood</h3><p class="portfolio-names">Приложение</p></li>
-                    <li><img src="./images/img3.jpg" alt="Photo" width="370"><h3>Проект Prime</h3><p class="portfolio-names">Маркетинг</p></li>
-                    <li><img src="./images/img4.jpg" alt="Photo" width="370"><h3>Проект Boxes</h3><p class="portfolio-names">Приложение</p></li>
-                    <li><img src="./images/img5.jpg" alt="Photo" width="370"><h3>Inspiration has no Borders</h3><p class="portfolio-names">Веб-сайт</p></li>
-                    <li><img src="./images/img6.jpg" alt="Photo" width="370"><h3>Издание Limited Edition</h3><p class="portfolio-names">Дизайн</p></li>
-                    <li><img src="./images/img7.jpg" alt="Photo" width="370"><h3>Проект LAB</h3><p class="portfolio-names">Маркетинг</p></li>
-                    <li><img src="./images/img8.jpg" alt="Photo" width="370"><h3>Growing Business</h3><p class="portfolio-names">Приложение</p></li>
+                <div class="portfolio-btns">
+                    <a class="portfolio-btn" href="" >Все</a>
+                    <a class="portfolio-btn" href="" >Веб-сайты</a>
+                    <a class="portfolio-btn" href="" >Приложения</a>
+                    <a class="portfolio-btn" href="" >Дизайн</a>
+                    <a class="portfolio-btn" href="" >Маркетинг</a>
+                </div>
+                <ul class="portfolio-gallery">
+                    <li><img class="gal-img" src="./images/img.jpg" alt="Photo" width="370"><h3>Технокряк</h3><p class="portfolio-names">Веб-сайт</p></li>
+                    <li><img class="gal-img" src="./images/img1.jpg" alt="Photo" width="370"><h3>Постер New Orlean vs Golden Star</h3><p class="portfolio-names">Дизайн</p></li>
+                    <li><img class="gal-img" src="./images/img2.jpg" alt="Photo" width="370"><h3>Ресторан Seafood</h3><p class="portfolio-names">Приложение</p></li>
+                    <li><img class="gal-img" src="./images/img3.jpg" alt="Photo" width="370"><h3>Проект Prime</h3><p class="portfolio-names">Маркетинг</p></li>
+                    <li><img class="gal-img" src="./images/img4.jpg" alt="Photo" width="370"><h3>Проект Boxes</h3><p class="portfolio-names">Приложение</p></li>
+                    <li><img class="gal-img" src="./images/img5.jpg" alt="Photo" width="370"><h3>Inspiration has no Borders</h3><p class="portfolio-names">Веб-сайт</p></li>
+                    <li><img class="gal-img" src="./images/img6.jpg" alt="Photo" width="370"><h3>Издание Limited Edition</h3><p class="portfolio-names">Дизайн</p></li>
+                    <li><img class="gal-img" src="./images/img7.jpg" alt="Photo" width="370"><h3>Проект LAB</h3><p class="portfolio-names">Маркетинг</p></li>
+                    <li><img class="gal-img" src="./images/img8.jpg" alt="Photo" width="370"><h3>Growing Business</h3><p class="portfolio-names">Приложение</p></li>
                 </ul>
             </div>
         </section>
@@ -58,7 +59,7 @@ font-family: 'Roboto', sans-serif;-->
             <div class="container">
                 <a class="logo-foot" href=""><span class="web">Web</span>Studio</a>
                 <address>
-                <ul> 
+                <ul class="footer-address"> 
                         <li> <a class="link-foot-adr" href="https://goo.gl/maps/Ae1zcUtkZR1KB5ff6">г. Киев, пр-т Леси Украинки, 26</a></li>
                         <li> <a class="link-foot" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                         <li> <a class="link-foot" href="tel:+380961111111">+38 096 111 11 11</a></li>
