--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ font-family: 'Roboto', sans-serif; -->
                 </ul>
                 <h2 class="title">Чем мы занимаемся</h2>
                 <div class="about-images">   
-                    <img class="images" src="./images/img.svg" alt="Photo 1" width="370">
-                    <img class="images" src="./images/img-3.svg" alt="Photo 2" width="370">
-                    <img class="images" src="./images/img-1.svg" alt="Photo 3" width="370">
+                    <img class="images" src="./images/1.jpg" alt="Photo 1" width="370">
+                    <img class="images" src="./images/2.jpg" alt="Photo 2" width="370">
+                    <img class="images" src="./images/3.jpg" alt="Photo 3" width="370">
                 </div>
             </div>
         </section>
@@ -67,10 +67,10 @@ font-family: 'Roboto', sans-serif; -->
             <div class="container">
                 <h2 class="title">Наша команда</h2>
                 <ul class="workers">
-                    <li><img src="./images/img-4.svg" alt="Photo" width="270"><div class="worker-names"><h3 class="name">Игорь Демьяненко</h3><p class="work-position">Product Designer</p></div> </li>
-                    <li><img src="./images/img-5.svg" alt="Photo" width="270"><div class="worker-names"><h3 class="name">Ольга Репина</h3><p class="work-position">Frontend Developer</p></div></li>
-                    <li><img src="./images/img-6.svg" alt="Photo" width="270"><div class="worker-names"><h3 class="name">Николай Тарасов</h3><p class="work-position">Marketing</p></div></li>
-                    <li><img src="./images/img-7.svg" alt="Photo" width="270"><div class="worker-names"><h3 class="name">Михаил Ермаков</h3><p class="work-position">UI Designer</p></div></li>
+                    <li><img src="./images/ihor.jpg" alt="Photo Ihor" width="270"><div class="worker-names"><h3 class="name">Игорь Демьяненко</h3><p class="work-position">Product Designer</p></div> </li>
+                    <li><img src="./images/olha.jpg" alt="Photo Olha" width="270"><div class="worker-names"><h3 class="name">Ольга Репина</h3><p class="work-position">Frontend Developer</p></div></li>
+                    <li><img src="./images/nikol.jpg" alt="Photo Nikolai" width="270"><div class="worker-names"><h3 class="name">Николай Тарасов</h3><p class="work-position">Marketing</p></div></li>
+                    <li><img src="./images/mikhail.jpg" alt="Photo Mikhail" width="270"><div class="worker-names"><h3 class="name">Михаил Ермаков</h3><p class="work-position">UI Designer</p></div></li>
                 </ul>
             </div>
         </section>
